--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="autoType.css">
     <link rel="stylesheet" href="Tech.css">
-    <link rel="stylesheet" href="Professional.css">
+    <link rel="stylesheet" href="professional.css">
     <!--Fonts-->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Istok+Web:400,700" rel="stylesheet">
